<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".VaultActivity">

    <TextView
        android:id="@+id/create_vault_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_vault"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/identity_id_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/identity_id"
        android:inputType="text"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/create_vault_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/vault_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/vault_name_hint"
        android:inputType="text"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/identity_id_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/create_vault_button" />

    <Button
        android:id="@+id/create_vault_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        app:layout_constraintTop_toTopOf="@id/vault_name_edit_text"
        app:layout_constraintBottom_toBottomOf="@id/vault_name_edit_text"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/vaults_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vaults"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/vault_name_edit_text"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        app:layout_constraintTop_toTopOf="@id/vaults_label"
        app:layout_constraintBottom_toBottomOf="@id/vaults_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/vaults_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/vaults_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_vault" />

        <ProgressBar
            android:id="@+id/loading_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/empty_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_vaults"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
